feat: migration to oh-my-posh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,33 +4,32 @@ set -g base-index 1
 # start with pane 1
 set -g pane-base-index 1
 
-# Split panes using 'b' and 'v'
+# split panes using 'b' and 'v'
 bind b split-window -h -c "#{pane_current_path}"
 bind v split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
-# Reload config file (change file location to your the tmux.conf you want to use)
+# reload config 
 bind r source-file ~/.tmux.conf
 
 set -g mouse on
 bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-no-clear pbcopy
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear pbcopy
 
-# Window settings
+# window settings
 set-option -g allow-rename off
 set -g renumber-windows on
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'git@github.com:tmux-plugins/tmux-sensible'
 
-# Misc plugins
+# misc plugins
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-
-# Resurrection
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
+# tmux theme
 set -g @plugin "janoamaral/tokyo-night-tmux"
 #run-shell "/home/etern1ty/.tmux/tokyo-night-tmux/tokyo-night.tmux"
 
